added single measurment update func
