# docs/swagger.json
@@ -1561,47 +1561,6 @@
                     }
                 }
             },
-            "put": {
-                "description": "Updates measurements by personId and dressTypeId. If measurement exists, it will be updated; otherwise, it will be created.",
-                "consumes": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Measurement"
-                ],
-                "summary": "Update Measurement(s)",
-                "parameters": [
-                    {
-                        "description": "Bulk update measurement request with persons array",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/requestModel.BulkUpdateMeasurementRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/response.Response"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/response.Response"
-                        }
-                    },
-                    "501": {
-                        "description": "Not Implemented",
-                        "schema": {
-                            "$ref": "#/definitions/response.Response"
-                        }
-                    }
-                }
-            },
             "post": {
                 "description": "Saves an instance of Measurement",
                 "consumes": [
@@ -1790,6 +1749,50 @@
             }
         },
         "/measurement/bulk": {
+            "put": {
+                "description": "Updates an array of measurements by their IDs",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Measurement"
+                ],
+                "summary": "Bulk Update Measurements",
+                "parameters": [
+                    {
+                        "description": "Array of measurements to update",
+                        "name": "measurements",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/requestModel.Measurement"
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "501": {
+                        "description": "Not Implemented",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Saves multiple measurements for multiple persons in bulk",
                 "consumes": [
@@ -1865,6 +1868,54 @@
                         "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/response.DataResponse"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Updates a single measurement by its ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Measurement"
+                ],
+                "summary": "Update Measurement",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Measurement id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Measurement to update",
+                        "name": "measurement",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requestModel.Measurement"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "501": {
+                        "description": "Not Implemented",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
                         }
                     }
                 }
@@ -3640,37 +3691,6 @@
                 },
                 "personId": {
                     "type": "integer"
-                }
-            }
-        },
-        "requestModel.BulkUpdateMeasurementPerson": {
-            "type": "object",
-            "properties": {
-                "isActive": {
-                    "type": "boolean"
-                },
-                "measurements": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/requestModel.BulkMeasurementItem"
-                    }
-                },
-                "personId": {
-                    "type": "integer"
-                }
-            }
-        },
-        "requestModel.BulkUpdateMeasurementRequest": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer"
-                },
-                "persons": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/requestModel.BulkUpdateMeasurementPerson"
-                    }
                 }
             }
         },
